various updates to regression mapping files

--- a/other_scripts/fCoverRegression_mapping/cavm_overlap_graphs.ipynb
+++ b/other_scripts/fCoverRegression_mapping/cavm_overlap_graphs.ipynb
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "07d60fb0-7890-46fe-8e1d-eaffca02a26e",
    "metadata": {},
    "outputs": [
@@ -152,7 +152,7 @@
        "Name: cavm_unit, dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "c0a9ade8-33d9-4e82-a43d-9d6a1f9355ce",
    "metadata": {},
    "outputs": [],
@@ -175,12 +175,361 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "218d847d-c974-4d69-a323-6915f63a2275",
    "metadata": {},
    "outputs": [],
    "source": [
     "fcover_w_area = fcover.merge(si[['plot_area', 'data_source']], left_index=True, right_index=True, how='left')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "fde7b599",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>deciduous_shrub_cover</th>\n",
+       "      <th>deciduous_tree_cover</th>\n",
+       "      <th>evergreen_shrub_cover</th>\n",
+       "      <th>evergreen_tree_cover</th>\n",
+       "      <th>forb_cover</th>\n",
+       "      <th>graminoid_cover</th>\n",
+       "      <th>nonvascular_sum_cover</th>\n",
+       "      <th>bryophyte_cover</th>\n",
+       "      <th>lichen_cover</th>\n",
+       "      <th>litter_cover</th>\n",
+       "      <th>bareground_cover</th>\n",
+       "      <th>water_cover</th>\n",
+       "      <th>other_cover</th>\n",
+       "      <th>plot_area</th>\n",
+       "      <th>data_source</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>visit_id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>u580f8d998</th>\n",
+       "      <td>17.440001</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>24.83</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>9.390000</td>\n",
+       "      <td>14.770000</td>\n",
+       "      <td>28.83</td>\n",
+       "      <td>22.120001</td>\n",
+       "      <td>6.71</td>\n",
+       "      <td>75.169998</td>\n",
+       "      <td>0.670000</td>\n",
+       "      <td>3.36</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>9503.317777</td>\n",
+       "      <td>ABR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>u7237c5455</th>\n",
+       "      <td>47.720001</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>40.279999</td>\n",
+       "      <td>56.049999</td>\n",
+       "      <td>39.68</td>\n",
+       "      <td>39.680000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>79.370003</td>\n",
+       "      <td>1.590000</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>9503.317777</td>\n",
+       "      <td>ABR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>u5a8ac1d8b</th>\n",
+       "      <td>40.660000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>21.340000</td>\n",
+       "      <td>20.010000</td>\n",
+       "      <td>24.67</td>\n",
+       "      <td>24.670000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>79.330002</td>\n",
+       "      <td>6.000000</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>9503.317777</td>\n",
+       "      <td>ABR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>u59bc4b4ea</th>\n",
+       "      <td>14.290000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>8.530000</td>\n",
+       "      <td>1.690000</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>9.520000</td>\n",
+       "      <td>76.190002</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1.59</td>\n",
+       "      <td>9503.317777</td>\n",
+       "      <td>ABR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>u28d3422f0</th>\n",
+       "      <td>8.240000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>19.459999</td>\n",
+       "      <td>8.240000</td>\n",
+       "      <td>0.40</td>\n",
+       "      <td>0.400000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>22.219999</td>\n",
+       "      <td>55.560001</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>9503.317777</td>\n",
+       "      <td>ABR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ubed4eb698</th>\n",
+       "      <td>96.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>55.00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>69.000000</td>\n",
+       "      <td>9.00</td>\n",
+       "      <td>6.500000</td>\n",
+       "      <td>2.50</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4.908739</td>\n",
+       "      <td>NGA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>u8c1017982</th>\n",
+       "      <td>59.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>27.00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>30.000000</td>\n",
+       "      <td>14.50</td>\n",
+       "      <td>10.500000</td>\n",
+       "      <td>4.00</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4.908739</td>\n",
+       "      <td>NGA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>u07dcd3715</th>\n",
+       "      <td>15.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>43.00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>88.000000</td>\n",
+       "      <td>8.50</td>\n",
+       "      <td>7.500000</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4.908739</td>\n",
+       "      <td>NGA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>u6d3236ec3</th>\n",
+       "      <td>82.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>50.00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>26.000000</td>\n",
+       "      <td>19.50</td>\n",
+       "      <td>15.000000</td>\n",
+       "      <td>4.50</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4.908739</td>\n",
+       "      <td>NGA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ueffdb5f96</th>\n",
+       "      <td>8.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>23.00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>70.000000</td>\n",
+       "      <td>18.00</td>\n",
+       "      <td>13.500000</td>\n",
+       "      <td>4.50</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4.908739</td>\n",
+       "      <td>NGA</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>976 rows × 15 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            deciduous_shrub_cover  deciduous_tree_cover  \\\n",
+       "visit_id                                                  \n",
+       "u580f8d998              17.440001                   NaN   \n",
+       "u7237c5455              47.720001                   NaN   \n",
+       "u5a8ac1d8b              40.660000                   NaN   \n",
+       "u59bc4b4ea              14.290000                   NaN   \n",
+       "u28d3422f0               8.240000                   NaN   \n",
+       "...                           ...                   ...   \n",
+       "ubed4eb698              96.000000                   NaN   \n",
+       "u8c1017982              59.000000                   NaN   \n",
+       "u07dcd3715              15.000000                   NaN   \n",
+       "u6d3236ec3              82.000000                   NaN   \n",
+       "ueffdb5f96               8.000000                   NaN   \n",
+       "\n",
+       "            evergreen_shrub_cover  evergreen_tree_cover  forb_cover  \\\n",
+       "visit_id                                                              \n",
+       "u580f8d998                  24.83                   NaN    9.390000   \n",
+       "u7237c5455                    NaN                   NaN   40.279999   \n",
+       "u5a8ac1d8b                    NaN                   NaN   21.340000   \n",
+       "u59bc4b4ea                    NaN                   NaN    8.530000   \n",
+       "u28d3422f0                    NaN                   NaN   19.459999   \n",
+       "...                           ...                   ...         ...   \n",
+       "ubed4eb698                  55.00                   NaN    0.500000   \n",
+       "u8c1017982                  27.00                   NaN    3.000000   \n",
+       "u07dcd3715                  43.00                   NaN    5.000000   \n",
+       "u6d3236ec3                  50.00                   NaN   10.000000   \n",
+       "ueffdb5f96                  23.00                   NaN    5.000000   \n",
+       "\n",
+       "            graminoid_cover  nonvascular_sum_cover  bryophyte_cover  \\\n",
+       "visit_id                                                              \n",
+       "u580f8d998        14.770000                  28.83        22.120001   \n",
+       "u7237c5455        56.049999                  39.68        39.680000   \n",
+       "u5a8ac1d8b        20.010000                  24.67        24.670000   \n",
+       "u59bc4b4ea         1.690000                   0.00              NaN   \n",
+       "u28d3422f0         8.240000                   0.40         0.400000   \n",
+       "...                     ...                    ...              ...   \n",
+       "ubed4eb698        69.000000                   9.00         6.500000   \n",
+       "u8c1017982        30.000000                  14.50        10.500000   \n",
+       "u07dcd3715        88.000000                   8.50         7.500000   \n",
+       "u6d3236ec3        26.000000                  19.50        15.000000   \n",
+       "ueffdb5f96        70.000000                  18.00        13.500000   \n",
+       "\n",
+       "            lichen_cover  litter_cover  bareground_cover  water_cover  \\\n",
+       "visit_id                                                                \n",
+       "u580f8d998          6.71     75.169998          0.670000         3.36   \n",
+       "u7237c5455           NaN     79.370003          1.590000         0.00   \n",
+       "u5a8ac1d8b           NaN     79.330002          6.000000         0.00   \n",
+       "u59bc4b4ea           NaN      9.520000         76.190002         0.00   \n",
+       "u28d3422f0           NaN     22.219999         55.560001         0.00   \n",
+       "...                  ...           ...               ...          ...   \n",
+       "ubed4eb698          2.50      0.000000          4.000000         0.00   \n",
+       "u8c1017982          4.00      0.000000          0.000000         0.00   \n",
+       "u07dcd3715          1.00      0.000000          0.000000         0.00   \n",
+       "u6d3236ec3          4.50      0.000000          0.000000         0.00   \n",
+       "ueffdb5f96          4.50      1.000000          0.000000         0.00   \n",
+       "\n",
+       "            other_cover    plot_area data_source  \n",
+       "visit_id                                          \n",
+       "u580f8d998          NaN  9503.317777         ABR  \n",
+       "u7237c5455          NaN  9503.317777         ABR  \n",
+       "u5a8ac1d8b          NaN  9503.317777         ABR  \n",
+       "u59bc4b4ea         1.59  9503.317777         ABR  \n",
+       "u28d3422f0          NaN  9503.317777         ABR  \n",
+       "...                 ...          ...         ...  \n",
+       "ubed4eb698          NaN     4.908739         NGA  \n",
+       "u8c1017982          NaN     4.908739         NGA  \n",
+       "u07dcd3715          NaN     4.908739         NGA  \n",
+       "u6d3236ec3          NaN     4.908739         NGA  \n",
+       "ueffdb5f96          NaN     4.908739         NGA  \n",
+       "\n",
+       "[976 rows x 15 columns]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fcover_w_area"
    ]
   },
   {
