--- a/processing/standardize_rava.ipynb
+++ b/processing/standardize_rava.ipynb
@@ -1125,7 +1125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": null,
    "id": "3c69fdfe-112a-4e9c-b873-ea1dd5539004",
    "metadata": {},
    "outputs": [
@@ -1288,7 +1288,7 @@
     "        # dynamically detect file encoding because it is not consistent\n",
     "        result = chardet.detect(file.read())\n",
     "    df = pd.read_csv(path, encoding=result['encoding'], encoding_errors='replace', \n",
-    "                     na_values=[-9, -9.0, '-9', '-9.0'], header=0, skiprows=[1]) # skip the turboveg plot id row\n",
+    "                     na_values=[-9, -9.0, '-9', '-9.0'], header=0)\n",
     "    fcover_dfs.append(df)\n",
     "fcover_dfs[3].head(3)"
    ]
